--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
- {
+ /*{
   min-height: 10px;
   border: 1px dashed red;
-}
+}*/
 body {
   background: black;
   font-family: "Libre Baskerville", serif;
